--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     ]
   },
   "devDependencies": {
-    "node-sass": "^6.0.1"
+    "node-sass": "^6.0.1",
+    "react-router-config": "^5.1.1",
+    "react-router-dom": "^5.2.0"
   }
 }
