Improve kiwi page

--- a/package.json
+++ b/package.json
@@ -39,6 +39,6 @@
     "node-sass": "^6.0.1",
     "react-router-config": "^5.1.1",
     "react-router-dom": "^5.2.0",
-    "react-sidebar": "^3.0.2"
+    "react-slideshow-image": "^3.5.0"
   }
 }
